@@ -32,7 +32,7 @@
 </addon>
 
 <addon id="plugin.video.tvondesizonex" name="TV on DESI ZONE"
-	version="1.6.7" provider-name="AJ">
+	version="1.6.8" provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
@@ -142,7 +142,7 @@
 	</extension>
 </addon>
 
-<addon id="script.module.turtlex" name="Turtle X" version="1.6.2"
+<addon id="script.module.turtlex" name="Turtle X" version="1.6.3"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
@@ -173,13 +173,13 @@
 	</extension>
 </addon>
 
-<addon id="service.playitx" name="PlayIt" version="0.3.9"
+<addon id="service.playitx" name="PlayIt" version="0.4.0"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
-		<import addon="script.module.turtlex" version="1.6.1" />
+		<import addon="script.module.turtlex" version="1.6.2" />
 	</requires>
 	<extension point="xbmc.service" library="TurtleMain.py"
 		start="login">
